1.6.0 ( rXXXX )
---------------

A first cut at adding BuildListeners added by Graeme Rocher.  cf. GANT-70.


1.5.1 ( rXXXXX )
----------------

Patch up the startGroovy script to deal with MSYS issues.


1.5.0 ( r10067 )
----------------

Amend property lookup so that Ant properties appear as entries in the Gant binding, i.e. Ant properties are
directly accessible as variables -- no need any more for ant.project.properties.skipTests, can just use
skipTests.  Where there is a name conflict Groovy variables take precedence over Ant properties.

Added nested <definition> tags to the Gant Ant task so as to allow -D... parameters to be specified.

Added nested <gantTarget> tags to the Gant Ant task so as to allow multiple targets to be run.

Correct the Gant Ant task file lookup to use basedir rather than the start directory as the base from which
to search for the file.

Provide a new constructor to allow Gant to be used in a Groovy Ant Task script.  cf. GANT-50.

Correct some of the cygpath option lists. (Thanks to Paulo Jerônimo for spotting and reporting the problem.) 

Extend processing of symblic links in the gant Posix scripts. (Thanks to Nicolas Lalevée for submitting
GANT-57.)

Update to expect to use Ivy 2.0.0-rc2 at run time.

Fix GANT-30 by removing .groovy and .gant extensions from file names before constructing class names.

GStrings no longer cause problem in depends call -- fixed GANT-55.  GANT-61 is a duplicate of GANT-55.

Serious refactoring of the constructor structure of Gant.  Thanks to Peter Ledbrook.  cf. GANT-48.  NB  This
is a significant breaking change for any code that creates Gant objects.  The script is no longer loaded as
part of construction but has been separated out using the loadScript method.  This allows for introduction
of the loadScriptClass method.  

Alter the start up jar load to include only jars with names starting "ant" from the $ANT_HOME/lib directory.
