@@ -1,6 +1,6 @@
 //  Gant -- A Groovy way of scripting Ant tasks.
 //
-//  Copyright © 2008 Russel Winder
+//  Copyright © 2008-9 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -169,6 +169,8 @@ target ( antProperty : '' ) {
    *
    *  See http://jira.codehaus.org/browse/GROOVY-3109
    */
+  //  TODO :  Get this test into a suitable state to include
+  //
   void XXXX_testPropertyAccessInsideCategory ( ) {
     script = '''
 target ( domTarget : 'Uses DOMCategory' ) {
